# 51cto-dl

./: .gitignore  README.md  app.py  build.py  build.spec  download_deps.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cto51/: __main__.py  auth.py  browser.py  capture.py  cli.py  config.py  courses.py  download.py  utils.py
